--- a/Final Project/Final Project/homework.html
+++ b/Final Project/Final Project/homework.html
@@ -87,77 +87,15 @@
         </div>
   </div>
 
-  <div class="language-container">
-    <!-- Spør imorgen
-    <div class="header" id="header-languagecomp">
-      <h1>Language comprehension</h1><h2>Exercises <br> Week 47</h2>
-    </div>
-  -->
-      <!-- Slideshow container -->
-      <div class="slideshow-container">
-
-        <!-- Full-width images with number and caption text -->
-        <div class="mySlides fade">
-          <div class="numbertext">1 / 8</div>
-          <img src="homework.jpg" style="width:100%">
-          <div class="text">Caption Text</div>
-        </div>
-
-        <div class="mySlides fade">
-          <div class="numbertext">2 / 8</div>
-          <img src="homework1.jpg" style="width:100%">
-          <div class="text">Caption Two</div>
-        </div>
-
-        <div class="mySlides fade">
-          <div class="numbertext">3 / 8</div>
-          <img src="homework2.jpg" style="width:100%">
-          <div class="text">Caption Three</div>
-        </div>
-
-        <div class="mySlides fade">
-          <div class="numbertext">4 / 8</div>
-          <img src="homework3.jpg" style="width:100%">
-          <div class="text">Caption Four</div>
-        </div>
-
-        <div class="mySlides fade">
-          <div class="numbertext">5 / 8</div>
-          <img src="homework4.jpg" style="width:100%">
-          <div class="text">Caption Five</div>
-        </div>
-
-        <div class="mySlides fade">
-          <div class="numbertext">6 / 8</div>
-          <img src="homework5.jpg" style="width:100%">
-          <div class="text">Caption Six</div>
-        </div>
-
-        <div class="mySlides fade">
-          <div class="numbertext">7 / 8</div>
-          <img src="homework6.jpg" style="width:100%">
-          <div class="text">Caption Seven</div>
-        </div>
-
-        <div class="mySlides fade">
-          <div class="numbertext">8 / 8</div>
-          <img src="homework7.jpg" style="width:100%">
-          <div class="text">Caption Eight</div>
-        </div>
-
-  <!-- Next and previous buttons -->
-    <a class="prev" onclick="plusSlides(-1)">&#10094;</a>
-    <a class="next" onclick="plusSlides(1)">&#10095;</a>
-  </div>
-  <br>
-
-<!-- The dots/circles -->
-  <div style="text-align:center">
-    <span class="dot" onclick="currentSlide(1)"></span>
-    <span class="dot" onclick="currentSlide(2)"></span>
-    <span class="dot" onclick="currentSlide(3)"></span>
-  </div>
-</div>
+<div class="homework-slides">
+  <img class="homework" src="homework.jpg" alt="">
+  <img class="homework" src="homework1.jpg" alt="">
+  <img class="homework" src="homework2.jpg" alt="">
+  <img class="homework" src="homework3.jpg" alt="">
+  <img class="homework" src="homework4.jpg" alt="">
+  <img class="homework" src="homework5.jpg" alt="">
+  <img class="homework" src="homework6.jpg" alt="">
+  <img class="homework" src="homework7.jpg" alt="">
 
 <div class="chat" id="chat">
   <div class="chat-header">
@@ -202,37 +140,30 @@
 
 
 <script>
-var slideIndex = 0;
-showSlides();
+var i = 1;
+show(i)
 
-function showSlides() {
-    var i;
-    var slides = document.getElementsByClassName("mySlides");
-    var dots = document.getElementsByClassName("dot");
-    for (i = 0; i < slides.length; i++) {
-       slides[i].style.display = "none";
-    }
-    slideIndex++;
-    if (slideIndex > slides.length) {slideIndex = 1}
-    for (i = 0; i < dots.length; i++) {
-        dots[i].className = dots[i].className.replace(" active", "");
-    }
-    slides[slideIndex-1].style.display = "block";
-    dots[slideIndex-1].className += " active";
-    setTimeout(showSlides, 2000); // Change image every 2 seconds
+function add(n) {
+  show(i+=1);
 }
 
-window.onscroll = function() {move()};
+function suntract(n) {
+  show(i-=1);
+}
 
-var ch = document.getElementById("chat");
-var sticky = ch.offsetTop;
-
-function move() {
-  if (window.pageYOffset > sticky) {
-    ch.classList.add("sticky");
-  } else {
-    ch.classList.remove("sticky");
+function show(n){
+  var j;
+  var x = document.getElementsByClassName("homework");
+  if (n>x.length) {
+    i=x.lenght;
   }
+  if (n<1) {
+    i = 1;
+  }
+  for (j= 0; j<x.length; j++) {
+    x[j].style.display ="none";
+  }
+  x[i-1].style.display="block";
 }
 
 </script>
