--- a/Final Project/Final Project/homework.html
+++ b/Final Project/Final Project/homework.html
@@ -78,7 +78,7 @@
 
   <div class="secondboxes">
         <div id="navigationbar">
-            <a  href="./Signin.html" onclick="alert('Good Job! Bye')"> Hi Henriette! <br> <img src="train.jpg" alt="train" width="50" height="50"><br>Sign out</a>
+            <a  href="./Signin.html" onclick="alert('Good Job! Bye')"> Hi Henriette! <br> <img src="./train.jpg" alt="train" width="50" height="50"><br>Sign out</a>
             <a  href="main.html"><img id="home" src="house.png" alt="Home Page" width="50" height="50"><br>HOME</a>
             <a  href="timetable.html"><img src="Timetable.png" alt="Week Plan" width="50" height="50"><br>WEEK PLAN</a>
             <a  href="SafeSpace.html"><img src="safe place.png" alt="Safe Space" width="50" height="50"><br> SAFE SPACE</a>
@@ -98,49 +98,49 @@
         <!-- Full-width images with number and caption text -->
         <div class="mySlides fade">
           <div class="numbertext">1 / 8</div>
-          <img src="homework.jpg" style="width:100%">
+          <img src="./homework.jpg" style="width:100%">
           <div class="text">Caption Text</div>
         </div>
 
         <div class="mySlides fade">
           <div class="numbertext">2 / 8</div>
-          <img src="homework1.jpg" style="width:100%">
+          <img src="./homework1.jpg" style="width:100%">
           <div class="text">Caption Two</div>
         </div>
 
         <div class="mySlides fade">
           <div class="numbertext">3 / 8</div>
-          <img src="homework2.jpg" style="width:100%">
+          <img src="./homework2.jpg" style="width:100%">
           <div class="text">Caption Three</div>
         </div>
 
         <div class="mySlides fade">
           <div class="numbertext">4 / 8</div>
-          <img src="homework3.jpg" style="width:100%">
+          <img src="./homework3.jpg" style="width:100%">
           <div class="text">Caption Four</div>
         </div>
 
         <div class="mySlides fade">
           <div class="numbertext">5 / 8</div>
-          <img src="homework4.jpg" style="width:100%">
+          <img src="./homework4.jpg" style="width:100%">
           <div class="text">Caption Five</div>
         </div>
 
         <div class="mySlides fade">
           <div class="numbertext">6 / 8</div>
-          <img src="homework5.jpg" style="width:100%">
+          <img src="./homework5.jpg" style="width:100%">
           <div class="text">Caption Six</div>
         </div>
 
         <div class="mySlides fade">
           <div class="numbertext">7 / 8</div>
-          <img src="homework6.jpg" style="width:100%">
+          <img src="./homework6.jpg" style="width:100%">
           <div class="text">Caption Seven</div>
         </div>
 
         <div class="mySlides fade">
           <div class="numbertext">8 / 8</div>
-          <img src="homework7.jpg" style="width:100%">
+          <img src="./homework7.jpg" style="width:100%">
           <div class="text">Caption Eight</div>
         </div>
 
@@ -164,35 +164,35 @@
     <h4>Feelings</h4>
   </div>
   <div class="emoji">
-  <button type="button"><img class="button-image" src="happy.png" id="emoji" alt="Emoji of feeling happy"></button>
-  <button type="button"><img class="button-image" src="cool.png" id="emoji" alt="Emoji of feeling awesome"></button>
-  <button type="button"><img class="button-image" src="confused.png" id="emoji" alt="Emoji of feeling confused"></button>
-  <button type="button"><img class="button-image" src="sad.png" id="emoji" alt="Emoji of feeling sad"></button>
-  <button type="button"><img class="button-image" src="scared.png" id="emoji" alt="Emoji of feeling scared"></button>
-  <button type="button"><img class="button-image" src="meltdown.png" id="emoji" alt="Emoji of having a meltdown"></button>
+  <button type="button"><img class="button-image" src="./happy.png" id="emoji" alt="Emoji of feeling happy"></button>
+  <button type="button"><img class="button-image" src="./cool.png" id="emoji" alt="Emoji of feeling awesome"></button>
+  <button type="button"><img class="button-image" src="./confused.png" id="emoji" alt="Emoji of feeling confused"></button>
+  <button type="button"><img class="button-image" src="./sad.png" id="emoji" alt="Emoji of feeling sad"></button>
+  <button type="button"><img class="button-image" src="./scared.png" id="emoji" alt="Emoji of feeling scared"></button>
+  <button type="button"><img class="button-image" src="./meltdown.png" id="emoji" alt="Emoji of having a meltdown"></button>
   </div>
   <div class="container" id="light">
-    <img src="myAvatar.png" alt="Avatar teacher">
+    <img src="./myAvatar.png" alt="Avatar teacher">
     <p>How are your studies going?</p>
     <span id="right" class="time">13.15</span>
   </div>
   <div class="container" id="dark">
-    <img src="train.jpg" id="right" alt="Avatar (of train) - child">
+    <img src="./train.jpg" id="right" alt="Avatar (of train) - child">
     <p id="rightside-dialog">No</p>
     <span id="left" class="time">13.16</span>
   </div>
   <div class="container" id="light">
-    <img src="myAvatar.png" alt="Avatar teacher">
+    <img src="./myAvatar.png" alt="Avatar teacher">
     <p>How are you feeling?</p>
     <span id="right" class="time">13.18</span>
   </div>
   <div class="container" id="dark">
-    <img src="train.jpg" id="right" alt="Avatar (of train) - child">
+    <img src="./train.jpg" id="right" alt="Avatar (of train) - child">
     <img src="meltdown.png" id="rightside-dialog" alt="Emoji of having a meltdown">
     <span id="left" class="time">13.20</span>
   </div>
   <div class="container" id="light">
-    <img src="myAvatar.png" alt="Avatar teacher">
+    <img src="./myAvatar.png" alt="Avatar teacher">
     <p>I'm so sorry! You have done so well today! I think you should
     take a break or go to your safe space.</p>
     <span id="right" class="time">13.24</span>
