--- a/Final Project/Final Project/index.html
+++ b/Final Project/Final Project/index.html
@@ -51,9 +51,9 @@
     </div>
     <div id="ti" class="timetablebody">
       <h5>Chapter 10: Exercise 10.2, 10.4, 10.5</h5>
-      <a href="awesome.gif" target="_blank"><button type="button">Done!</button></a>
+      <a href="./awesome.gif" target="_blank"><button type="button">Done!</button></a>
       <h5>Chapter 11: Exercise 11.4, 11.5, 11.13</h5>
-      <a href="bravo.gif" target="_blank"><button type="button">Done!</button></a>
+      <a href="./bravo.gif" target="_blank"><button type="button">Done!</button></a>
     </div>
     <div id="lunsj" class="timetablebody">
       <h5>12.00-12.30</h5>
@@ -63,7 +63,7 @@
     </div>
     <div id="lunsj" class="timetablebody">
       <h5>Play a game with someone</h5>
-      <a href="whoopie.gif" target="_blank"><button type="button">Done!</button></a>
+      <a href="./whoopie.gif" target="_blank"><button type="button">Done!</button></a>
     </div>
     <div id="12" class="timetablebody">
       <h5>12.30-14.00</h5>
@@ -79,11 +79,11 @@
 
   <div class="secondboxes">
         <div id="navigationbar">
-            <a  href="#"> Hi Henrik! <br> <img src="train.jpg" alt="train" width="50" height="50"><br>Sign out</a>
-            <a  href="./Homework"><img src="Assignments.png" alt="Homework" width="50" height="50"><br>HOMEWORK</a>
-            <a  href="./Week Plan"><img src="Timetable.png" alt="Week Plan" width="50" height="50"><br>WEEK PLAN</a>
-            <a  href="./Safe Space"><img src="safe place.png" alt="Safe Space" width="50" height="50"><br> SAFE PLACE</a>
-            <a  href="./Mood"><img src="Mood.png" alt="Mood" width="50" height="50"><br> MOOD</a>
+            <a  href="#"> Hi Henrik! <br> <img src="././train.jpg" alt="train" width="50" height="50"><br>Sign out</a>
+            <a  href="./Homework"><img src="./Assignments.png" alt="Homework" width="50" height="50"><br>HOMEWORK</a>
+            <a  href="./Week Plan"><img src="./Timetable.png" alt="Week Plan" width="50" height="50"><br>WEEK PLAN</a>
+            <a  href="./Safe Space"><img src="./safe place.png" alt="Safe Space" width="50" height="50"><br> SAFE PLACE</a>
+            <a  href="./Mood"><img src="./Mood.png" alt="Mood" width="50" height="50"><br> MOOD</a>
         </div>
   </div>
 
@@ -92,19 +92,19 @@
       <h3>Teacher Chat</h3>
       <h4>Feelings</h4>
     </div>
-    <button type="button"><img class="button-image" src="happy.png" id="emoji" alt="Emoji of feeling happy"></button>
-    <button type="button"><img class="button-image" src="cool.png" id="emoji" alt="Emoji of feeling awesome"></button>
-    <button type="button"><img class="button-image" src="confused.png" id="emoji" alt="Emoji of feeling confused"></button>
-    <button type="button"><img class="button-image" src="sad.png" id="emoji" alt="Emoji of feeling sad"></button>
-    <button type="button"><img class="button-image" src="scared.png" id="emoji" alt="Emoji of feeling scared"></button>
-    <button type="button"><img class="button-image" src="meltdown.png" id="emoji" alt="Emoji of having a meltdown"></button>
+    <button type="button"><img class="button-image" src="./happy.png" id="emoji" alt="Emoji of feeling happy"></button>
+    <button type="button"><img class="button-image" src="./cool.png" id="emoji" alt="Emoji of feeling awesome"></button>
+    <button type="button"><img class="button-image" src="./confused.png" id="emoji" alt="Emoji of feeling confused"></button>
+    <button type="button"><img class="button-image" src="./sad.png" id="emoji" alt="Emoji of feeling sad"></button>
+    <button type="button"><img class="button-image" src="./scared.png" id="emoji" alt="Emoji of feeling scared"></button>
+    <button type="button"><img class="button-image" src="./meltdown.png" id="emoji" alt="Emoji of having a meltdown"></button>
     <div class="container" id="light">
       <img src="myAvatar.png" alt="Avatar teacher">
       <p>How are your studies going?</p>
       <span id="right" class="time">13.15</span>
     </div>
     <div class="container" id="dark">
-      <img src="train.jpg" id="right" alt="Avatar (of train) - child">
+      <img src="./train.jpg" id="right" alt="Avatar (of train) - child">
       <p id="rightside-dialog">No</p>
       <span id="left" class="time">13.16</span>
     </div>
@@ -114,7 +114,7 @@
       <span id="right" class="time">13.18</span>
     </div>
     <div class="container" id="dark">
-      <img src="train.jpg" id="right" alt="Avatar (of train) - child">
+      <img src="./train.jpg" id="right" alt="Avatar (of train) - child">
       <img src="meltdown.png" id="rightside-dialog" alt="Emoji of having a meltdown">
       <span id="left" class="time">13.20</span>
     </div>
@@ -136,7 +136,7 @@
 <!-- Angry  -->
 
 <div class="box">
-  <a target="_blank" href="img_forest.jpg"><img src="Angry train.png" alt="Avatar" id="image"></a>
+  <a target="_blank" href="./img_forest.jpg"><img src="Angry train.png" alt="Avatar" id="image"></a>
   <div class="overlay">
     <div class="text">Angry</div>
   </div>
@@ -145,7 +145,7 @@
 
 <!-- Happy -->
  <div class="box">
-  <a target="_blank" href="img_forest.jpg">
+  <a target="_blank" href="./img_forest.jpg">
       <img src="Happy train.png" id="image" alt="happy Thomas train">
     </a>
   <div class="overlay">
@@ -155,7 +155,7 @@
 
 <!-- Sad  -->
   <div class="box">
-  <a target="_blank" href="img_forest.jpg"> <img src="Sad train.jpg" alt="sad Thomas train" id="image" >
+  <a target="_blank" href="./img_forest.jpg"> <img src="Sad ./train.jpg" alt="sad Thomas train" id="image" >
     </a>
   <div class="overlay">
     <div class="text">Sad</div>
@@ -164,7 +164,7 @@
 
 <!-- Surprised -->
   <div class="box">
-  <a target="_blank" href=""> <img src="Surprised train.jpg" alt="Suprised Thomas train" id="image" >
+  <a target="_blank" href=""> <img src="./Surprised ./train.jpg" alt="Suprised Thomas train" id="image" >
     </a>
   <div class="overlay">
     <div class="text">Surprised</div>
