--- a/Final Project/Final Project/homework.html
+++ b/Final Project/Final Project/homework.html
@@ -93,7 +93,7 @@
 
 
 <!-- content -->
-<div class="homework-container"
+<div class="homework-container">
   <div class="homework-slides">
     <button class="select-slide" onclick="showSlide(1)">1</button>
     <button class="select-slide" onclick="showSlide(2)">2</button>
@@ -103,7 +103,7 @@
     <button class="select-slide" onclick="showSlide(6)">6</button>
     <button class="select-slide" onclick="showSlide(7)">7</button>
     <button class="select-slide" onclick="showSlide(8)">8</button>
-  <div class="homework-slides">
+
     <img class="homework" src="homework.jpg" alt="First slide in homework" width="800" height="600">
     <img class="homework" src="homework1.jpg" alt="second slide in homework"  width="800" height="600">
     <img class="homework" src="homework2.jpg" alt="third slide in homework" width="800" height="600">
